# learnopengl

./: .gitignore
0.hello/: CMakeLists.txt  glad.c  main.cpp
